Checkin for timeless@bemail.org: Fixed rounding error making LARGER work for font sizes less than 9px. b=12461, r=attinasi@netscape.com,disttsc@bart.nl a=brendan@mozilla.org